--- a/assign1/assign1-sol/index.html
+++ b/assign1/assign1-sol/index.html
@@ -16,7 +16,7 @@
 
          <div class="form-group">
              <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
+             placeholder="list comma separated dishes you usually have for lunch."
              class="form-control" ng-model="lunch.inputString" ng-class="lunch.inputType">
          </div>
          <div class="form-group">
