--- a/assign2/assign2-sol/index.html
+++ b/assign2/assign2-sol/index.html
@@ -37,15 +37,18 @@
        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li> -->
       <input type="text" ng-model="toBuyCtrl.itemName" placeholder="item name">
       <input type="text" ng-model="toBuyCtrl.itemQuantity" placeholder="quantity">
-      <button ng-click="toBuyCtrl.addItem();">Add Item To Shopping List</button>
+      <button ng-click="toBuyCtrl.addItem();" class="btn btn-default">Add Item To Shopping List</button>
      <ul>
         <li ng-repeat="item in toBuyCtrl.toBuyItems">
           Buy {{ item.quantity }}  {{ item.name }}(s)
-          <button ng-click="toBuyCtrl.removeItem($index);">Remove Item</button>
-          <button ng-click="toBuyCtrl.bought($index);">Bought</button>
+          <!-- <button ng-click="toBuyCtrl.removeItem($index);">Remove Item</button> -->
+          <!-- <button ng-click="toBuyCtrl.bought($index);">Bought</button> -->
+          <button ng-click="toBuyCtrl.removeItem($index);" class="btn btn-default"><span></span> Remove</button>
+          <button ng-click="toBuyCtrl.bought($index);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
         </li>
       </ul>
      <div ng-show="toBuyCtrl.toBuyItems.length == 0" class="emptyMessage">Everything is bought!</div>
+
     </div>
 
     <!-- Already Bought List -->
