--- a/assign3/index.html
+++ b/assign3/index.html
@@ -18,7 +18,7 @@
     <div class="form-group narrow-button">
       <button class="btn btn-primary" ng-click='menu.find()'>Narrow It Down For Me!</button>
     </div>
-
+    {{menu.found}}
     <br><br><br>
     <found-items
       found-list="menu.found"
