--- a/assign4/index.html
+++ b/assign4/index.html
@@ -9,33 +9,24 @@
     <h1>Welcome to Chinese Food Categories</h1>
 
     <ui-view></ui-view>
-
+    <loading-spinner></loading-spinner>
     <!-- Libraries -->
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
 
     <!-- Modules -->
-    <!-- <script src="src/shoppinglist/shoppinglist.module.js"></script> -->
     <script src="src/shoppinglist/menuapp.module.js"></script>
     <script src="src/shoppinglist/data.module.js"></script>
+    <script src="src/spinner/spinner.module.js"></script>
 
     <!-- Routes -->
     <script src="src/routes.js"></script>
-
-    <!-- 'ShoppingList' module artifacts -->
-    <!-- <script src="src/shoppinglist/shoppinglist.component.js"></script> -->
-    <!-- <script src="src/shoppinglist/main-shoppinglist.controller.js"></script> -->
-    <!-- <script src="src/shoppinglist/shoppinglist.service.js"></script> -->
-    <!-- <script src="src/shoppinglist/item-detail.controller.js"></script> -->
-
-
     <script src="src/shoppinglist/categories.component.js"></script>
     <script src="src/shoppinglist/items.component.js"></script>
-    <script src="src/shoppinglist/main-menuapp.controller.js"></script>
-
     <script src="src/shoppinglist/menudata.service.js"></script>
     <script src="src/shoppinglist/categories.controller.js"></script>
     <script src="src/shoppinglist/items.controller.js"></script>
+    <script src="src/spinner/loadingspinner.component.js"></script>
 
 
   </body>
