--- a/assign5/index.html
+++ b/assign5/index.html
@@ -52,8 +52,8 @@
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
 
-              <li>
-                <a href="#">
+              <li  ui-sref-active="active">
+                <a  ui-sref="public.userInfo">
                   <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> My Info </a>
               </li>
 
@@ -140,7 +140,7 @@
     <!-- register  -->
     <script src="src/public/register/register.controller.js"></script>
     <script src="src/public/register/register.service.js"></script>
-
+    <script src="src/public/register/userDish.component.js"></script>
 
     <!-- ADMIN SITE -->
 
